objects/ssot__OutcomeActivity__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitId__c</fullName>
        <label>Benefit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GoalDefinitionId__c</fullName>
        <label>Goal Definition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Outcome Activity Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutcomeActivityType__c</fullName>
        <label>Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutcomeIntentId__c</fullName>
        <label>Outcome Intent</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramId__c</fullName>
        <label>Program</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668773174_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OutcomeActivity_ProgramId_map_Progra_rel</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>OutcomeActivity_ProgramId_map_Progra_rel</relationshipLabel>
        <relationshipName>rel_1716668773174_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668777220_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OutcomeActivity_GoalDefinitionId_map_rel</label>
        <referenceTo>ssot__GoalDefinition__dlm</referenceTo>
        <relationshipLabel>OutcomeActivity_GoalDefinitionId_map_rel</relationshipLabel>
        <relationshipName>rel_1716668777220_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726575105_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OutcomeActivity_BenefitId_map_Progra_rel</label>
        <referenceTo>ssot__ProgramBenefit__dlm</referenceTo>
        <relationshipLabel>OutcomeActivity_BenefitId_map_Progra_rel</relationshipLabel>
        <relationshipName>rel_1716726575105_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>